# cpp-challenge

./: CMakeLists.txt  main.cpp  readme.md  solution.h  test.cpp
input/: large_test1.csv  large_test2.csv  large_test3.csv  test1.csv  test2.csv
output/: test1.csv  test2.csv  test4.csv  test6.csv
